package co.edu.uniquindio.taller.ejercicio2a3.model;

/**
 * Son los tipos de cuenta posibles
 */
public enum AccountType {
    AHORROS,
    CORRIENTE
}