package co.edu.uniquindio.taller.ejercicio2a3.model;

public class BankException extends java.lang.Exception {

    public BankException(final String message) {
        super(message);
    }

}
